+ add travis deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,10 @@ before_install:
 
 script:
 - docker-compose run --rm web python test.py
+
+deploy:
+ provider: script
+ skip_cleanup: true
+ script: docker login --email=$DOCKER_EMAIL --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD && docker push $DOCKER_USERNAME/swplanetapi:latest
+ on:
+   branch: master
