+ add image name no compose build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   web:
     build: .
+    image: mportela/swplanetapi
     command: python -u app.py
     volumes:
         - .:/app
