+ build image deve ter a tag latest par ao deploy travis dar o push da imagem no dockerhug
fiz este exemplo de dpeloy para só gerar a dockerhubimage caso passe nos testes.
pois se eu adicionasse simplesmente um automated build no dockerhub ele sempre geraria o latest
quando alterasse o master, mesmo sem rodar testes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   web:
     build: .
-    image: mportela/swplanetapi
+    image: mportela/swplanetapi:latest
     command: python -u app.py
     volumes:
         - .:/app
